--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,59 @@
-== README
+## Portfolio
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+By Bob Ellis (<a href="https://github.com/bobellis" target="#">GitHub</a>)
 
-Things you may want to cover:
+@ Epicodus Programming School, Portland, OR
 
-* Ruby version
+GNU General Public License, version 3 (see below). Copyright (c) 2015 Bob Ellis.
 
-* System dependencies
+### Description
 
-* Configuration
+**Portfolio**
 
-* Database creation
+Portfolio is a collection of my skills and projects
+### Author(s)
 
-* Database initialization
+Bob Ellis
 
-* How to run the test suite
+### Setup
 
-* Services (job queues, cache servers, search engines, etc.)
+This app was written using ruby on rails
 
-* Deployment instructions
+Start App: rails serve from the project directory
 
-* ...
+Navigate using your favorite browser to http://localhost:3000
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+### License ###
+Copyright  (C)  2015  Bob Ellis
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+
+## Prerequisites
+
+You will need the following things properly installed on your computer.
+
+* [Git](http://git-scm.com/)
+* [Rails](http://rubyonrails.org/)
+
+## Installation
+
+* `git clone <repository-url>` this repository
+* cd into the new directory
+
+## Running / Development
+
+* `rails server`
+* Visit your app at [http://localhost:3000](http://localhost:3000).
